syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "com.jsongrts.twopc.api";
option java_outer_classname = "TwopcProto";

// The greeting service definition.
service TwopcParticipant {
  rpc prepare(PrepareRequest) returns (PrepareResponse) {}
  rpc commit(CommitRequest) returns (CommitResponse) {}
}

message PrepareRequest {
    string txnId = 1;
    string newValue = 2;
}

message PrepareResponse {
    string txnId = 1;
    int32 status = 2;
}

message CommitRequest {
    string txnId = 1;
    // true=commit, false=abort
    bool commitOrAbort = 2;
}

message CommitResponse {
    string txnId = 1;
    int32 status = 2;
}
